--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,16 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#titulo{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 50px;
+   font-size: 1.5rem;
+   width: 350px;
+   width:100%;
+   
+}
 .conteudo{
     margin: 0 auto;
     width:100%;
